--- a/style.css
+++ b/style.css
@@ -64,12 +64,15 @@ table {
     width: 100%;
     margin: 20px 0;
     border-radius: 8px;
+    border-color: #444;
     
 }
 
 table, th, td {
     border: 1px solid #ddd;
     border-radius: 8px;
+    border-color: #444;
+    
 }
 
 th, td {
@@ -79,6 +82,8 @@ th, td {
 
 th {
     background-color: #FAF0E6;
+    border-color: #444;
+    
 }
 
 /* Form styles */
@@ -88,12 +93,6 @@ form {
     margin: 5px;
     padding: 5px;
     border-radius: 8px;
-}
-
-form label {
-    display: inline-block;
-    width: 100px;
-	text-align:left;
 }
 
 form input, form textarea {
@@ -207,8 +206,62 @@ footer {
 #about-us{
 	background:#FAF0E6;
 	font-family: Arial, sans-serif;
-	text-align:bleft;
+	text-align:left;
     color: #333;
     margin: 0;
     padding: 0;
+}
+#viewAll{
+    padding: 10px 15px;
+    border: 2px solid #FAF0E6;
+    border-left: none;
+    border-radius: 0 5px 5px 0;
+    background-color: #555;
+    color: white;
+    outline: none;
+}
+#viewAll:hover {
+    background-color: #444;
+}
+#featured{
+    background:#FAF0E6;
+	font-family: Arial, sans-serif;
+    color: #333;
+    margin: 0;
+    padding: 0;
+}
+
+#search-container {
+    display: flex;
+    justify-content: center;
+    align-items: right;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#search-bar {
+    width: 300px;
+    padding: 10px;
+    border: 2px solid #FAF0E6;
+    border-radius: 5px 0 0 5px;
+    outline: none;
+}
+
+#search-bar:focus {
+    border-color: #FAF0E6;
+}
+
+#search-button {
+    padding: 10px 15px;
+    border: 2px solid #FAF0E6;
+    border-left: none;
+    border-radius: 0 5px 5px 0;
+    background-color: #555;
+    color: white;
+    cursor: pointer;
+    outline: none;
+}
+
+#search-button:hover {
+    background-color: #444;
 }
